# coral_in_tree_VL53L8_i2c

./: .gitmodules  CMakeLists.txt  MIMXRT1176xxxxx_cm7_ram.ld  README.md
archive/src/: i2c_test.cpp
config/: README.md  tasks_config.yaml
debug/: is_alive.cc
include/: VL53L8_bridge.hh  pin_mapping_for_coral_to_vl53l8.hpp  task_config.hh  tof_task.hh
libs/VL53L8CX-main/src/: platform.h
scripts/: generate_tasks.py  get_buf_size.py
src/: VL53L8_bridge.cc  main.cc  main.cpp  main_cm7.cc  task_config.cc  tof_task.cc
